# libnetdiag

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
bpf/: arp_monitor.bpf.c  ping_trace.bpf.c
docs/: DOMAIN.md  README.md
docs/decisions/: 001-library-creation-and-scope.md  002-event-model-timestamping-queue.md  003-testing-fuzz-valgrind.md  004-enhanced-arp-recon.md  005-nmap-style-probe-parsers.md  006-anomaly-spoof-events.md  007-bandwidth-probe-skeleton.md
examples/: simple_harness.c
fuzz/: fuzz_feed.c
include/: netdiag.h  nfct.h  nl80211_parse.h
man/: libnetdiag.3
src/: arping.c  arprecon.c  bwdiag.c  dnsdiag.c  netdiag.c  nfct.c  nl80211_parse.c  nmapdiag.c  ping.c  traceroute.c
tests/: test_dialectic_arping.c  test_dialectic_dnsdiag.c  test_dialectic_ping.c  test_dialectic_traceroute.c  test_nfct_cta.c  test_nl80211_attrs.c  test_smoke.c
